<resources>
    <string name="app_name">Pengyu\'s Android Labs</string>
    <string name="hello_message">Type in your password:</string>
    <string name="button_message">Login</string>
    <string name="editmessage" translatable="false">I\'m a EditText</string>
    <string name="hinttext" translatable="false">Write something here</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>